--- a/.github/workflows/deb-package.yml
+++ b/.github/workflows/deb-package.yml
@@ -99,6 +99,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      - uses: actions/checkout@v4
       - name: meta
         shell: pwsh
         run: |
