--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -9,18 +9,16 @@ on:
   pull_request:
     branches:
       - main
-  # workflow_run:
-  #   workflows: ["Test Launcher"]
-  #   types:
-  #     - completed
-
+ 
 jobs:
-  # test-launcher:
-  #     uses: ./.github/workflows/test.yml   
-  #     permissions:
-  #      checks: write
-  #      pull-requests: write
+  test-launcher:
+      uses: ./.github/workflows/test.yml   
+      permissions:
+       checks: write
+       pull-requests: write
+
   version:
+     needs: [test-launcher]
      runs-on: ubuntu-latest
      outputs:
       version: ${{ steps.set-version.outputs.version }}
@@ -32,8 +30,7 @@ jobs:
           project: fiskaltrust.Launcher
           path: src          
 
-  package:
-    #needs: [test-launcher]
+  package:    
     needs: [version]
     name: package
     strategy:
@@ -110,7 +107,8 @@ jobs:
          name: drop-${{ matrix.target }}
          path: ./publish/drop-${{ matrix.target }}
       
-      - uses: ./.github/actions/zip-hash
+      - name: Upload zip and hash of output package
+        uses: ./.github/actions/zip-hash
         with:
           path: ${{ steps.copy-executables.outputs.path }}
           zipFileName : "fiskaltrust.Launcher-${{ needs.version.outputs.version }}"
@@ -122,18 +120,13 @@ jobs:
           $readmePath = "./scripts/${{ matrix.scriptFolder }}/README.md"
           Copy-Item -Path ./README.md -Destination $readmePath
           (Get-Content $readmePath -Raw) -replace '(?s)<!-- BEGIN (CONTRIBUTING|LICENSE) -->.*?<!-- END (CONTRIBUTING|LICENSE) -->\s*', '' | Set-Content $readmePath
-                     
-      - uses: ./.github/actions/zip
+        
+      - name: Upload zip of scripts 
+        uses: ./.github/actions/zip
         with:
           path: ./scripts/${{ matrix.scriptFolder }}/
           zipFileName : "fiskaltrust.Launcher-${{ needs.version.outputs.version }}"
-          artifactName: "scripts-${{ matrix.target }}"
-
-      # - uses: ./.github/actions/package
-      #   with:
-      #     project: fiskaltrust.Launcher,fiskaltrust.LauncherUpdater
-      #     path: src
-      #     target : ${{ matrix.target }} 
+          artifactName: "scripts-${{ matrix.target }}" 
 
   deb-package:
       needs: [version]
