--- a/.github/actions/sign/action.yml
+++ b/.github/actions/sign/action.yml
@@ -17,7 +17,7 @@ runs:
       id: filter_files_for_codesigning
       shell: pwsh
       run: |
-        $files = Get-ChildItem -Path "${{ inputs.path }}" -Filter "fiskaltrust.Launcher.*" -Recurse || Where-Object { $_.Extension -ne ".json" } | Select-Object -ExpandProperty FullName
+        $files = Get-ChildItem -Path "${{ inputs.path }}" -Filter "fiskaltrust.Launcher.*" -Recurse | Where-Object { $_.Extension -ne ".json" } | Select-Object -ExpandProperty FullName
         
         # Multiline outputs required a unique delimiter
         $EOF = -join (1..15 | ForEach {[char]((48..57)+(65..90)+(97..122) | Get-Random)})
