--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -107,7 +107,7 @@ jobs:
       #     filter: 'fiskaltrust.Launcher*'     
       
       - name: Upload zip and hash of output package
-        uses: ./.github/actions/zip-hash
+        uses: ./.github/actions/zip-hash-package
         with:
           path: ${{ steps.copy-executables.outputs.path }}
           zipFileName : "fiskaltrust.Launcher-${{ needs.version.outputs.version }}"
@@ -121,7 +121,7 @@ jobs:
           (Get-Content $readmePath -Raw) -replace '(?s)<!-- BEGIN (CONTRIBUTING|LICENSE) -->.*?<!-- END (CONTRIBUTING|LICENSE) -->\s*', '' | Set-Content $readmePath
         
       - name: Upload zip of scripts 
-        uses: ./.github/actions/zip
+        uses: ./.github/actions/zip-package
         with:
           path: ./scripts/${{ matrix.scriptFolder }}/
           zipFileName : "fiskaltrust.Launcher-${{ needs.version.outputs.version }}"
