--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,7 @@ jobs:
     name: test
     strategy:
       matrix:
-          vmImage: [windows-latest]
-          #vmImage: [windows-latest, ubuntu-latest, macos-latest]
+          vmImage: [windows-latest, ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.vmImage }}
    
    
