test sign action on windows

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -48,21 +48,21 @@ jobs:
             target: win-x86
             scriptFolder: 'windows'
 
-          - vmImage: ubuntu-latest
-            target: linux-x64
-            scriptFolder: 'linux'
+          # - vmImage: ubuntu-latest
+          #   target: linux-x64
+          #   scriptFolder: 'linux'
 
-          - vmImage: ubuntu-latest
-            target: linux-arm
-            scriptFolder: 'linux'
+          # - vmImage: ubuntu-latest
+          #   target: linux-arm
+          #   scriptFolder: 'linux'
 
-          - vmImage: ubuntu-latest
-            target: linux-arm64
-            scriptFolder: 'linux'
+          # - vmImage: ubuntu-latest
+          #   target: linux-arm64
+          #   scriptFolder: 'linux'
 
-          - vmImage: macos-latest
-            target: osx-x64
-            scriptFolder: 'macos'
+          # - vmImage: macos-latest
+          #   target: osx-x64
+          #   scriptFolder: 'macos'
    
     runs-on: ${{ matrix.vmImage }}
 
