--- a/azure-pipelines/templates/stages/build.yml
+++ b/azure-pipelines/templates/stages/build.yml
@@ -59,7 +59,7 @@ stages:
                 displayName: "[${{ project }}] Publish"
 
           - pwsh: dotnet tool install --global AzureSignTool
-            condition: startsWith(variables['target'], "win-") # startsWith(variables['Build.SourceBranch'], 'refs/tags/v')
+            condition: startsWith(variables['target'], 'win-') # startsWith(variables['Build.SourceBranch'], 'refs/tags/v')
             displayName: Install AzureSignTool
 
           - pwsh: |
@@ -77,7 +77,7 @@ stages:
               }
             env:
               AZURE_CLIENT_SECRET: $(AZURE_CLIENT_SECRET)
-            condition: startsWith(variables['target'], "win-") # startsWith(variables['Build.SourceBranch'], 'refs/tags/v')
+            condition: startsWith(variables['target'], 'win-') # startsWith(variables['Build.SourceBranch'], 'refs/tags/v')
 
           - publish: $(Build.ArtifactStagingDirectory)/drop-$(target)
             artifact: drop-$(target)
